--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "sass": "^1.89.0",
-    "styled-components": "^6.1.18"
+    "sass": "^1.89.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
