Configuração de pasta store na lista de pastas com caminho para importação absoluta

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -6,6 +6,7 @@
         "components/*": ["src/components/*"],
         "data/*": ["src/data/*"],
         "pages/*": ["src/pages/*"],
+        "store/*": ["src/store/*"],
         "styles/*": ["src/styles/*"],
         "types/*": ["src/types/*"]
       }
