--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
       "components/*": ["src/components/*"],
       "data/*": ["src/data/*"],
       "pages/*": ["src/pages/*"],
+      "store/*": ["src/store/*"],
       "styles/*": ["src/styles/*"],
       "types/*": ["src/types/*"]
     }
