--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/redux-persist": "^4.0.0",
     "classnames": "^2.5.1",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
@@ -18,6 +19,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.89.0",
     "uuid": "^11.1.0"
   },
