--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "server": "json-server --watch database/db.json --port 3333"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
