--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@types/redux-persist": "^4.0.0",
+    "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
