--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@testing-library/cypress": "^10.0.3",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "cypress": "^14.4.1",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
