--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@cypress/react": "^9.0.1",
+    "@cypress/vite-dev-server": "^6.0.3",
     "@eslint/js": "^9.25.0",
     "@testing-library/cypress": "^10.0.3",
     "@types/node": "^22.15.21",
