--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -7,6 +7,7 @@
       "config/*": ["src/common/config/*"],
       "data/*": ["src/data/*"],
       "pages/*": ["src/pages/*"],
+      "services/*": ["src/services/*"],
       "store/*": ["src/store/*"],
       "styles/*": ["src/styles/*"],
       "types/*": ["src/types/*"]
