--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "components/*": ["src/components/*"],
       "data/*": ["src/data/*"],
       "pages/*": ["src/pages/*"],
+      "services/*": ["src/services/*"],
       "store/*": ["src/store/*"],
       "styles/*": ["src/styles/*"],
       "types/*": ["src/types/*"]
