--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "server": "json-server --watch database/db.json --port 3333"
   },
   "dependencies": {
+    "@chakra-ui/system": "^2.6.2",
+    "@chakra-ui/toast": "^7.0.2",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/redux-persist": "^4.0.0",
     "axios": "^1.9.0",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.16.0",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
